--- a/ContributionImage/Dockerfile
+++ b/ContributionImage/Dockerfile
@@ -2,6 +2,8 @@ FROM jupyter/datascience-notebook
 
 LABEL maintainer="Joshua L. Phillips <https://www.cs.mtsu.edu/~jphillips/>"
 
+#spencer741 added keras-tqdm for team7
+
 USER root
 
 # Additional tools
